<resources>
    <string name="app_name">Subastas appCoinLavin</string>
    <string name="password">Introduce contraseña</string>
    <string name="usuario">Introduce usuario</string>
    <string name="login">Login</string>
    <string name="welcome">Bienvenido a Numismática Lavín</string>
    <string name="cerrarSesion">Cerrar Sesion</string>

    <string name="registrar">Registro</string>
    <string name="regContrasena">Contraseña</string>
    <string name="regNombre">Nombre</string>
    <string name="btnRegistro">Registrar</string>
    <string name="regMail">Mail de usuario</string>
    <string name="regApellido">Apellido</string>
    <string name="logoTransparente">Logo Transparente</string>
    <string name="tarjeta_1">Texto ejemplo</string>
    <string name="tarjeta_2">TarjetaLote</string>
    <string name="btnVolverLogin">Volver al Login</string>
    <string name="btnLLamar">Llamar por teléfono</string>
    <string name="title_activity_ubicacion_tienda_map">Map</string>
    <string name="errorMail">Error al enviar el mail</string>
    <string name="enviarMail">Enviar mail</string>
    <string name="btnCatalogo">Catálogo</string>
    <string name="bienvenido">BIENVENIDO A NUMISMÁTICA LAVÍN</string>
    <string name="menuPrincipal">Principal</string>
    <string name="menuFavorito">Catalogo</string>
    <string name="menuPerfil">Editar perfil</string>
    <string name="registrotxt">Ir a pantalla de registro</string>
    <string name="title_activity_editar_perfil">EditarPerfil</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="btnEditar">Editar perfil</string>
    <string name="catalogo">Catálogo de subasta</string>
    <string name="reflote">Referencia Lote</string>
    <string name="salida">Salida</string>
    <string name="descripcion">Descripcion</string>
    <string name="linea">linea</string>
    <string name="enviar_mail">Enviar mail</string>
    <string name="mostrar_foto">Mostrar Foto</string>
    <string name="menumusica">Musica on/off</string>
    <string name="menu1inicio">Inicio</string>
    <string name="menu1catalogo">Catálogo</string>
    <string name="menu1perfil">Perfil</string>
    <string name="menumusicaon">Música ON</string>
    <string name="menumusicaoff">Música OFF</string>
    <string name="error_campos_vacios">Se deben llenar todos los campos</string>
    <string name="error_registro">Error en el registro</string>
    <string name="registro_correcto">Registro correcto</string>
    <string name="error_conexion">Error de conexión</string>
    <string name="error_edicion">Error en la edición</string>
    <string name="edicion_correcta">Edición correcta</string>
    <string name="map_donde_estamos">Dónde estamos</string>
    <string name="borra_datos_sesion">Se borran los datos de sesión de su dispositivo</string>
    <string name="error_llamar">Error al intentar llamar</string>
    <string name="error_contras_usu">Error de usuario o contraseña</string>
    <string name="camara">Camara</string>
    <string name="clasifica_mi_moneda">Clasifica mi moneda</string>
    <string name="cuerpo_del_mensaje">Cuerpo del mensaje</string>
    <string name="enviarFoto">Enviar</string>
    <string name="salirDeFoto">Salir</string>
    <string name="numislav_gmail_com">numislav@gmail.com</string>
    <string name="tu_moneda_menu">Tu moneda</string>
    <string name="clasifica_tu_moneda">Clasifica tu moneda</string>
    <string name="instruccionesMailFoto">Enviar una foto. \nPara enviar foto pulsa en Cámara, \nsaca la foto, acepta,y después modifica \nel Asunto y \nel Cuerpo del mensaje</string>
    <string name="btnMostrar">Mostrar</string>
    <string name="modo_oscuro">Modo Oscuro</string>

</resources>