<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/inicio"
        android:icon="@drawable/icon_lock"
        android:fontFamily="@font/akaya_kanadaka_regular"
        android:title="@string/menuPrincipal"/>
    <item
        android:id="@+id/catalogo"
        android:icon="@drawable/icon_email"
        android:fontFamily="@font/akaya_kanadaka_regular"
        android:title="@string/menuFavorito"/>
    <item
        android:id="@+id/perfil"
        android:icon="@drawable/icon_lock"
        android:fontFamily="@font/akaya_kanadaka_regular"
        android:title="@string/menuPerfil"/>
    <item
        android:id="@+id/tumoneda"
        android:icon="@drawable/icon_lock"
        android:fontFamily="@font/akaya_kanadaka_regular"
        android:title="@string/clasifica_tu_moneda"/>

</menu>