<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:verticalScrollbarPosition="defaultPosition"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MailActivity">
        <Button
            android:id="@+id/btncamara"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:fontFamily="@font/akaya_kanadaka_regular"
            android:padding="15dp"
            android:text="@string/camara"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="209dp"
            android:adjustViewBounds="false"
            android:contentDescription="@string/logoTransparente"
            android:cropToPadding="true"
            android:foregroundGravity="center_horizontal"
            android:padding="25dp"
            app:srcCompat="@drawable/logowordpress"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="50dp" />


        <EditText
            android:id="@+id/emailaddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Direccion de mail"
            android:fontFamily="@font/akaya_kanadaka_regular"
            android:hint="@string/numislav_gmail_com"
            android:inputType="textEmailAddress"
            android:textSize="25sp" />


        <EditText
            android:id="@+id/emailsubject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Subject"
            android:fontFamily="@font/akaya_kanadaka_regular"
            android:hint="@string/clasifica_mi_moneda"
            android:inputType="textEmailSubject"
            android:textSize="25sp" />


        <EditText
            android:id="@+id/emailtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Contenido"
            android:fontFamily="@font/akaya_kanadaka_regular"
            android:hint="@string/cuerpo_del_mensaje"
            android:inputType="textEmailSubject"
            android:textSize="25sp" />

        <Button
            android:id="@+id/emailsendbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:fontFamily="@font/akaya_kanadaka_regular"
            android:gravity="center"
            android:text="@string/enviarFoto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnsalir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:fontFamily="@font/akaya_kanadaka_regular"
            android:gravity="center"
            android:text="@string/salirDeFoto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <include
            layout="@layout/bottom_nav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"/>

    </LinearLayout>

