<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="151dp"
        android:layout_height="113dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        app:srcCompat="@drawable/logowordpress" />

    <EditText
        android:id="@+id/user"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@android:color/darker_gray"
        android:drawableLeft="@drawable/icon_email"
        android:ems="10"
        android:hint="@string/usuario"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/user"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@android:color/darker_gray"
        android:drawableLeft="@drawable/icon_lock"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="243dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/login"></Button>

    <Button
        android:id="@+id/buttonRegistrar"
        android:layout_width="238dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/registrar"></Button>


</RelativeLayout>