<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="398dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="386dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgLote"
                android:layout_width="match_parent"
                android:layout_height="251dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="-2dp"
                android:clickable="true"
                android:contentDescription="@string/app_name"
                android:focusable="true"
                android:src="@mipmap/ic_launcher" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_below="@id/imgLote"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="128dp">

                    <TextView
                        android:id="@+id/txtrefLote"
                        android:layout_width="359dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/akaya_kanadaka_regular"
                        android:padding="10dp"
                        android:text="@string/reflote"
                        android:textAlignment="textStart"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtsalida"
                        android:layout_width="345dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="18dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="9dp"
                        android:layout_toEndOf="@id/txtrefLote"
                        android:fontFamily="@font/akaya_kanadaka_regular"
                        android:padding="10dp"
                        android:text="@string/salida"
                        android:textAlignment="textEnd" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="79dp"
                        android:layout_below="@id/txtrefLote">

                        <TextView
                            android:id="@+id/txtdescripcion"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/akaya_kanadaka_regular"
                            android:padding="10dp"
                            android:text="@string/descripcion" />
                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txtLinea"
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:layout_marginBottom="20dp"
        android:background="#453D3D"
        android:text="@string/linea" />

</LinearLayout>