<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".MainActivity"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/infCorporativa"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/akaya_kanadaka_regular"
        android:gravity="center_horizontal"
        android:text="@string/bienvenido"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <Button
            android:id="@+id/btncamara"
            android:background="@color/purple_500"
            android:layout_width="238dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/infCorporativa"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/akaya_kanadaka_regular"
            android:text="@string/camara"/>

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="215dp"
            android:layout_height="165dp"
            android:layout_below="@+id/btncamara"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:clickable="true"
            android:contentDescription="@string/bienvenido"
            android:focusable="true"
            android:foregroundGravity="center_horizontal"
            app:srcCompat="@drawable/logowordpress" />

        <EditText
            android:id="@+id/emailaddress"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView1"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/akaya_kanadaka_regular"
            android:autofillHints="@string/numislav_gmail_com"
            android:backgroundTint="@android:color/darker_gray"
            android:ems="10"
            android:hint="@string/numislav_gmail_com"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/emailsubject"
            android:layout_width="324dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailaddress"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="8dp"
            android:autofillHints="@string/clasifica_mi_moneda"
            android:backgroundTint="@android:color/darker_gray"
            android:ems="10"
            android:fontFamily="@font/akaya_kanadaka_regular"
            android:hint="@string/clasifica_mi_moneda"
            android:inputType="textEmailSubject" />

        <EditText
            android:id="@+id/emailtext"
            android:layout_width="324dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailsubject"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="8dp"
            android:autofillHints="@string/clasifica_mi_moneda"
            android:backgroundTint="@android:color/darker_gray"
            android:ems="10"
            android:fontFamily="@font/akaya_kanadaka_regular"
            android:hint="@string/clasifica_mi_moneda"
            android:inputType="text|textMultiLine" />

        <Button
            android:id="@+id/emailsendbutton"
            android:background="@color/purple_500"
            android:layout_width="243dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailtext"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/akaya_kanadaka_regular"
            android:text="@string/enviar_mail"/>

        <Button
            android:id="@+id/btnsalir"
            android:background="@color/purple_500"
            android:layout_width="238dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailsendbutton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/akaya_kanadaka_regular"
            android:text="@string/salida"/>

    <include
        android:id="@+id/includemail"
        android:visibility="visible"
        layout="@layout/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnsalir" />


</RelativeLayout>

